# axaxax

./: .gitignore  pyproject.toml
app/: main.py
app/core/: config.py
app/database/models/: user.py
src/: main.py
src/actions/: rules.py
src/actions/user/: __init__.py  default.py  ping.py  test.py
src/app/core/: config.py
src/app/database/models/: user.py
src/base/: service.py
src/core/: __init__.py  config.py  emoji.py  utils.py
src/manager/: user.py
src/models/: user.py
src/services/: user.py
